Optimize Dockerfile and update bot features
- Combined build dependencies and `curl` installation in Dockerfile to reduce image layers.
- Incremented version in Dockerfile and `main.py` from `1.14.8` to `1.14.9`.
- Added a new `broadcast` command to `aclient` class in `main.py` for messaging server owners.
- Implemented `broadcast` function in `Owner` class to send messages and track statistics.
- Updated dependencies in `requirements.txt`, adjusting versions for compatibility.

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -15,8 +15,8 @@ ARG BUILD_DATE
 ARG COMMIT
 
 # Install build dependencies and curl
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev libc-dev linux-headers rust cargo g++ && \
-    apk add --no-cache curl && \
+RUN apk add --virtual .build-deps gcc musl-dev python3-dev libc-dev linux-headers rust cargo g++ && \
+    apk add curl && \
     python -m pip install --upgrade pip && \
     pip install --upgrade setuptools wheel && \
     pip install -r requirements.txt && \
@@ -31,7 +31,7 @@ LABEL MAINTAINER="Discord: pika.pika.no.mi (970119359840284743)" \
       COMMIT=$COMMIT \
       DESCRIPTION="Discord bot for DBD for Steam stats." \
       RELEASE=$BUILD_DATE \
-      VERSION="1.14.8" \
+      VERSION="1.14.9" \
       URL="https://gitlab.bloodygang.com/Serpensin/DBDStats"
 
 CMD ["python3", "main.py"]
