--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,33 +1,34 @@
-aiohttp==3.9.5
+aiohappyeyeballs==2.3.4
+aiohttp==3.10.1
 aiosignal==1.3.1
 anyio==4.4.0
 async-timeout==4.0.3
-attrs==23.2.0
+attrs==24.2.0
 beautifulsoup4==4.12.3
-cachetools==5.3.3
-certifi==2024.6.2
+cachetools==5.4.0
+certifi==2024.7.4
 charset-normalizer==3.3.2
 colorama==0.4.6
-discord.py==2.3.2
+discord.py==2.4.0
 dnspython==2.6.1
-exceptiongroup==1.2.1
+exceptiongroup==1.2.2
 frozenlist==1.4.1
 google-api-core==2.19.1
 googleapis-common-protos==1.63.2
-google-auth==2.30.0
+google-auth==2.33.0
 google-cloud-core==2.4.1
-google-cloud-translate==3.15.3
-grpcio==1.64.1
+google-cloud-translate==3.15.5
+grpcio==1.65.4
 grpcio-status
 h11==0.14.0
 html2text==2024.2.26
 httpcore==1.0.5
 idna==3.7
-jsonschema==4.22.0
+jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
-motor==3.5.0
+motor==3.5.1
 multidict==6.0.5
-pip==24.1.1
+pip==24.2
 protobuf
 proto-plus==1.24.0.dev0
 psutil==6.0.0
@@ -39,9 +40,9 @@ python-dotenv==1.0.1
 pytz==2024.1
 referencing==0.35.1
 requests==2.32.3
-rpds-py==0.18.1
+rpds-py==0.20.0
 rsa==4.9
-sentry-sdk==2.7.1
+sentry-sdk==2.12.0
 sniffio==1.3.1
 soupsieve==2.5
 typing_extensions==4.12.2
