Fix Dockerfile ENV syntax for TERM and PYTHONUNBUFFERED
Corrected the syntax of environment variable declarations in the Dockerfile.
Changed `ENV TERM xterm` to `ENV TERM=xterm` and `ENV PYTHONUNBUFFERED 1` to `ENV PYTHONUNBUFFERED=1` to ensure proper environment variable assignment.

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -7,8 +7,8 @@ COPY main.py .
 COPY __init__.py .
 COPY requirements.txt .
 
-ENV TERM xterm
-ENV PYTHONUNBUFFERED 1
+ENV TERM=xterm
+ENV PYTHONUNBUFFERED=1
 
 ARG TARGETPLATFORM
 ARG BUILD_DATE
