--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,5 +1,5 @@
-aiohappyeyeballs==2.3.4
-aiohttp==3.10.1
+aiohappyeyeballs==2.3.5
+aiohttp==3.10.2
 aiosignal==1.3.1
 anyio==4.4.0
 async-timeout==4.0.3
@@ -17,7 +17,8 @@ google-api-core==2.19.1
 googleapis-common-protos==1.63.2
 google-auth==2.33.0
 google-cloud-core==2.4.1
-google-cloud-translate==3.15.5
+google-cloud-translate==3.16.0
+grpc-google-iam-v1==0.13.1
 grpcio==1.65.4
 grpcio-status
 h11==0.14.0
