--- a/DBDStats/requirements.txt
+++ b/DBDStats/requirements.txt
@@ -1,52 +1,52 @@
-aiohappyeyeballs==2.4.0
-aiohttp==3.10.5
+aiohappyeyeballs==2.4.3
+aiohttp==3.10.10
 aiosignal==1.3.1
-anyio==4.4.0
+anyio==4.6.2.post1
 async-timeout==4.0.3
 attrs==24.2.0
 beautifulsoup4==4.12.3
 cachetools==5.5.0
 certifi==2024.8.30
-charset-normalizer==3.3.2
+charset-normalizer==3.4.0
 colorama==0.4.6
 discord.py==2.4.0
-dnspython==2.6.1
+dnspython==2.7.0
 exceptiongroup==1.2.2
 frozenlist==1.4.1
-google-api-core==2.19.2
+google-api-core==2.21.0
 googleapis-common-protos==1.65.0
-google-auth==2.34.0
+google-auth==2.35.0
 google-cloud-core==2.4.1
 google-cloud-translate==3.16.0
 grpc-google-iam-v1==0.13.1
-grpcio==1.66.1
+grpcio==1.66.2
 grpcio-status
 h11==0.14.0
 html2text==2024.2.26
-httpcore==1.0.5
-idna==3.8
+httpcore==1.0.6
+idna==3.10
 jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-motor==3.5.1
-multidict==6.0.5
+jsonschema-specifications==2024.10.1
+motor==3.6.0
+multidict==6.1.0
 pip==24.2
 protobuf
 proto-plus==1.24.0.dev0
 psutil==6.0.0
-pyasn1_modules==0.4.0
-pyasn1==0.6.0
+pyasn1_modules==0.4.1
+pyasn1==0.6.1
 pycountry==24.6.1
-pymongo==4.8.0
+pymongo==4.10.1
 python-dotenv==1.0.1
-pytz==2024.1
+pytz==2024.2
 referencing==0.35.1
 requests==2.32.3
 rpds-py==0.20.0
 rsa==4.9
-sentry-sdk==2.13.0
+sentry-sdk==2.16.0
 sniffio==1.3.1
 soupsieve==2.6
 typing_extensions==4.12.2
-urllib3==2.2.2
+urllib3==2.2.3
 wcwidth==0.2.13
-yarl==1.9.4
+yarl==1.15.2
