--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,7 @@ docker-build-x86:
     - docker:dind
   script:
     - docker login -u serpensin -p $DOCKER_PW
-    - docker buildx create --use --name mybuilder --driver docker-container
+    - docker buildx create --use --name mybuilder_x86
     - sleep 2
     - docker buildx build --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") --build-arg COMMIT=${CI_COMMIT_SHA} --compress --no-cache --platform linux/386,linux/amd64 --output=type=registry -t serpensin/dbdstats:latest ./DBDStats
 
@@ -19,7 +19,7 @@ docker-build-arm:
     - docker:dind
   script:
     - docker login -u serpensin -p $DOCKER_PW
-    - docker buildx create --use --name mybuilder --driver docker-container
+    - docker buildx create --use --name mybuilder_arm
     - sleep 2
     - docker buildx build --build-arg BUILD_DATE=$(date -u +"%Y-%m-%dT%H:%M:%SZ") --build-arg COMMIT=${CI_COMMIT_SHA} --compress --no-cache --platform linux/arm/v6,linux/arm/v7,linux/arm64/v8 --output=type=registry -t serpensin/dbdstats:latest ./DBDStats
   tags:
