--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -32,7 +32,7 @@ LABEL MAINTAINER="Discord: pika.pika.no.mi (970119359840284743)" \
       COMMIT=$COMMIT \
       DESCRIPTION="Discord bot for DBD for Steam stats." \
       RELEASE=$BUILD_DATE \
-      VERSION="1.16.2" \
-      URL="https://gitlab.bloodygang.com/Serpensin/DBDStats"
+      VERSION="1.16.3" \
+      URL="https://github.com/Serpensin/DiscordBots-DBDStats"
 
 CMD ["python3", "main.py"]
