Migrate CI from GitLab to GitHub Actions
Removed .gitlab-ci.yml and added .github/workflows/docker-image.yml.
Updated DBDStats.sln to reference new workflow file.
Changed Docker image source in docker-compose files.
Updated README.md with new Docker image source.
Removed release_build.bat, now handled by GitHub Actions.
Added new GitHub Actions workflow for building and pushing Docker images.

--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       MongoDB_host: mongo           #####################################
       MongoDB_port: 27017           #           Don't change!!!         #
       MongoDB_database: DBDStats    #####################################
-    image: serpensin/dbdstats
+    image: ghcr.io/serpensin/discordbots-dbdstats:latest
     volumes:
       - dbdstats:/app/DBDStats
       - /PATH/TO/googleauth.json:/app/googleauth.json
