Improve Docker setup and MongoDB configuration
Added `docker_debug.bat` for debugging in Docker. Updated `docker-compose.yml` to configure MongoDB with `--bind_ip_all` and `--noauth`. Removed internal MongoDB service from `docker-compose_with_external_MongoDB.yml` and replaced with external MongoDB placeholders.

Incremented version to `1.16.15` in `Dockerfile` and `main.py`. Fixed typo in `isRunningInDocker` and improved MongoDB connection string handling with default values and logging. Added logs to indicate Docker runtime and MongoDB connection details.

--- a/DBDStats/Docker-Compose/docker-compose.yml
+++ b/DBDStats/Docker-Compose/docker-compose.yml
@@ -6,6 +6,7 @@ services:
     container_name: MongoDB
     hostname: mongo
     restart: always
+    command: ["mongod", "--bind_ip_all", "--noauth"]
     volumes:
       - dbdata:/data/db
     networks:
@@ -29,9 +30,6 @@ services:
       libretransURL: URL_for_libretranslate
       libretransAPIkey: APIKey_for_libretranslate
       LOG_LEVEL: INFO
-      MongoDB_host: mongo           #####################################
-      MongoDB_port: 27017           #           Don't change!!!         #
-      MongoDB_database: DBDStats    #####################################
     image: ghcr.io/serpensin/discordbots-dbdstats:latest
     volumes:
       - dbdstats:/app/DBDStats
