Refactor and cleanup: remove unused modules, restructure
Refactored `app_translation.py` to centralize translations for multiple locales, simplifying management and extension.

Removed unused modules (`bot_directory.py`, `googletrans.py`, `killswitch.py`, `libretrans.py`, `log_handler.py`, `steam.py`, `steamcharts.py`, `twitch.py`) as their functionality was deprecated or replaced.

Updated project structure to use `modules/` directory instead of `CustomModules/`. Adjusted `DBDStats.pyproj`, `Dockerfile`, and `main.py` to reflect this change.

Enhanced `main.py` with improved error handling for the `support` command. Updated `requirements.txt` to remove dependencies for deleted modules.

Incremented bot version to `1.16.20` in `Dockerfile`.

--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -2,7 +2,7 @@
 
 WORKDIR /app
 
-COPY CustomModules ./CustomModules
+COPY modules ./modules
 COPY main.py .
 COPY __init__.py .
 COPY requirements.txt .
@@ -31,7 +31,7 @@ EXPOSE 5000
 LABEL MAINTAINER="Discord: pika.pika.no.mi (970119359840284743)" \
       DESCRIPTION="Discord bot for DBD for Steam stats." \
       RELEASE=$BUILD_DATE \
-      VERSION="1.16.19" \
+      VERSION="1.16.20" \
       URL="https://github.com/Serpensin/DiscordBots-DBDStats"
 
 CMD ["python3", "main.py"]
