--- a/DBDStats/.env.template
+++ b/DBDStats/.env.template
@@ -6,7 +6,7 @@ support_server=DISCORD-ID-SUPPORTSERVER
 twitch_client_id=TWITCH-CLIENT-ID #(https://dev.twitch.tv/console/apps/create)
 twitch_client_secret=TWITCH-CLIENT-SECRET
 libretransAPIkey=LIBRETRANS-APIKEY
-libretransURL=URL-OF-YOUR-LIBRETRANS #(https://translate.bloodygang.com)
+libretransURL=URL-OF-YOUR-LIBRETRANS #(https://translate.serpensin.com)
 MongoDB_host=MONGODB-HOST
 MongoDB_port=MONGODB-PORT
 MongoDB_user=MONGODB-USERNAME
