--- a/DBDStats/Dockerfile
+++ b/DBDStats/Dockerfile
@@ -16,7 +16,7 @@ ARG COMMIT
 
 # Install build dependencies and curl
 RUN apk add --no-cache libstdc++
-RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev libc-dev linux-headers rust cargo g++ libffi-dev && \
+RUN apk add --no-cache --virtual .build-deps gcc musl-dev python3-dev libc-dev linux-headers rust cargo g++ libffi-dev openssl-dev && \
     apk add curl && \
     python -m pip install --upgrade pip && \
     pip install --upgrade setuptools wheel && \
